--- a/TodoMAUI/TodoMAUI.csproj
+++ b/TodoMAUI/TodoMAUI.csproj
@@ -48,12 +48,18 @@
 	<ItemGroup>
 	  <None Remove="ViewModel\" />
 	  <None Remove="CommunityToolkit.Mvvm" />
+	  <None Remove="sqlite-net-pcl" />
+	  <None Remove="Models\" />
+	  <None Remove="Services\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="ViewModel\" />
+	  <Folder Include="Models\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="DetailPage.xaml">
