--- a/TodoMAUI/TodoMAUI.csproj
+++ b/TodoMAUI/TodoMAUI.csproj
@@ -51,6 +51,8 @@
 	  <None Remove="sqlite-net-pcl" />
 	  <None Remove="Models\" />
 	  <None Remove="Services\" />
+	  <None Remove="SQLitePCLRaw.core" />
+	  <None Remove="SQLitePCLRaw.bundle_green" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="ViewModel\" />
@@ -60,6 +62,8 @@
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
 	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="SQLitePCLRaw.core" Version="2.1.0" />
+	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="DetailPage.xaml">
