--- a/FishinLogs/FishinLogs.csproj
+++ b/FishinLogs/FishinLogs.csproj
@@ -49,10 +49,17 @@
 	<ItemGroup>
 	  <None Remove="ViewModel\" />
 	  <None Remove="View\" />
+	  <None Remove="Model\" />
+	  <None Remove="SQLitePCLRaw.bundle_green" />
+	  <None Remove="sqlite-net-pcl" />
+	  <None Remove="Services\" />
+	  <None Remove="CommunityToolkit.Mvvm" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="ViewModel\" />
 	  <Folder Include="View\" />
+	  <Folder Include="Model\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\HomePage.xaml">
@@ -70,5 +77,10 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\fish1.svg" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.0" />
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
 	</ItemGroup>
 </Project>
